force-app/main/default/objects/Airlines_CSR__c/Airlines_CSR__c.object-meta.xml
<CustomObject>
    <label>Airlines CSR</label>
    <nameField>
        <displayFormat>AL-{0000}</displayFormat>
        <label>AirLine ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Airlines CSR</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>