force-app/main/default/objects/Airlines_CSR__c/fields/AC__c.field-meta.xml
<CustomField>
    <fullName>AC__c</fullName>
    <label>AC</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>