force-app/main/default/objects/Airlines_CSR__c/fields/Adhoc_Freight__c.field-meta.xml
<CustomField>
    <fullName>Adhoc_Freight__c</fullName>
    <label>Adhoc Freight</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>