force-app/main/default/objects/Airlines_CSR__c/fields/ADHoc_Rate__c.field-meta.xml
<CustomField>
    <fullName>ADHoc_Rate__c</fullName>
    <label>ADHoc Rate</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>