force-app/main/default/objects/Airlines_CSR__c/fields/ADHocRateStatus__c.field-meta.xml
<CustomField>
    <fullName>ADHocRateStatus__c</fullName>
    <label>ADHocRateStatus</label>
    <length>255</length>
    <type>Text</type>
</CustomField>