force-app/main/default/objects/Airlines_CSR__c/fields/AirLine__c.field-meta.xml
<CustomField>
    <fullName>AirLine__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Airline</label>
    <referenceTo>AirLine1__c</referenceTo>
    <relationshipLabel>Airlines CSR</relationshipLabel>
    <relationshipName>Airlines_CSR</relationshipName>
    <type>Lookup</type>
</CustomField>