force-app/main/default/objects/Airlines_CSR__c/fields/AV__c.field-meta.xml
<CustomField>
    <fullName>AV__c</fullName>
    <label>AV</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>