force-app/main/default/objects/Airlines_CSR__c/fields/AW__c.field-meta.xml
<CustomField>
    <fullName>AW__c</fullName>
    <label>AW</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>