force-app/main/default/objects/Airlines_CSR__c/fields/AWB__c.field-meta.xml
<CustomField>
    <fullName>AWB__c</fullName>
    <label>AWB</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>