force-app/main/default/objects/Airlines_CSR__c/fields/AWB_Prefix__c.field-meta.xml
<CustomField>
    <fullName>AWB_Prefix__c</fullName>
    <label>AWB Prefix</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>