force-app/main/default/objects/Airlines_CSR__c/fields/AWB_Shipment_Type__c.field-meta.xml
<CustomField>
    <fullName>AWB_Shipment_Type__c</fullName>
    <label>AWB Shipment Type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>