force-app/main/default/objects/Airlines_CSR__c/fields/AWBDate__c.field-meta.xml
<CustomField>
    <fullName>AWBDate__c</fullName>
    <label>AWB Date</label>
    <type>Date</type>
</CustomField>