force-app/main/default/objects/Airlines_CSR__c/fields/BEFORE_TAX_AMOUNT__c.field-meta.xml
<CustomField>
    <fullName>BEFORE_TAX_AMOUNT__c</fullName>
    <label>BEFORE TAX AMOUNT</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>