force-app/main/default/objects/Airlines_CSR__c/fields/Billed_To__c.field-meta.xml
<CustomField>
    <fullName>Billed_To__c</fullName>
    <label>Billed To</label>
    <length>255</length>
    <type>Text</type>
</CustomField>