force-app/main/default/objects/Airlines_CSR__c/fields/CC__c.field-meta.xml
<CustomField>
    <fullName>CC__c</fullName>
    <label>CC</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>