force-app/main/default/objects/Airlines_CSR__c/fields/CESS__c.field-meta.xml
<CustomField>
    <fullName>CESS__c</fullName>
    <label>CESS</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>