force-app/main/default/objects/Airlines_CSR__c/fields/CG__c.field-meta.xml
<CustomField>
    <fullName>CG__c</fullName>
    <label>CG</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>