force-app/main/default/objects/Airlines_CSR__c/fields/Charged_Weight__c.field-meta.xml
<CustomField>
    <fullName>Charged_Weight__c</fullName>
    <label>Charged Weight</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>