force-app/main/default/objects/Airlines_CSR__c/fields/ChWt__c.field-meta.xml
<CustomField>
    <fullName>ChWt__c</fullName>
    <label>ChWt</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>