force-app/main/default/objects/Airlines_CSR__c/fields/CL__c.field-meta.xml
<CustomField>
    <fullName>CL__c</fullName>
    <label>CL</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>