force-app/main/default/objects/Airlines_CSR__c/fields/Commission_Amt__c.field-meta.xml
<CustomField>
    <fullName>Commission_Amt__c</fullName>
    <label>Commission Amt</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>