force-app/main/default/objects/Airlines_CSR__c/fields/Confirmed__c.field-meta.xml
<CustomField>
    <fullName>Confirmed__c</fullName>
    <label>Confirmed</label>
    <length>255</length>
    <type>Text</type>
</CustomField>