force-app/main/default/objects/Airlines_CSR__c/fields/CT__c.field-meta.xml
<CustomField>
    <fullName>CT__c</fullName>
    <label>CT</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>