force-app/main/default/objects/Airlines_CSR__c/fields/DG__c.field-meta.xml
<CustomField>
    <fullName>DG__c</fullName>
    <label>DG</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>