force-app/main/default/objects/Airlines_CSR__c/fields/Discount_OCDA__c.field-meta.xml
<CustomField>
    <fullName>Discount_OCDA__c</fullName>
    <label>Discount OCDA</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>