force-app/main/default/objects/Airlines_CSR__c/fields/DO__c.field-meta.xml
<CustomField>
    <fullName>DO__c</fullName>
    <label>DO</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>