force-app/main/default/objects/Airlines_CSR__c/fields/DR__c.field-meta.xml
<CustomField>
    <fullName>DR__c</fullName>
    <label>DR</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>