force-app/main/default/objects/Airlines_CSR__c/fields/DT__c.field-meta.xml
<CustomField>
    <fullName>DT__c</fullName>
    <label>DT</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>