force-app/main/default/objects/Airlines_CSR__c/fields/F_N__c.field-meta.xml
<CustomField>
    <fullName>F_N__c</fullName>
    <label>F/N</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>