force-app/main/default/objects/Airlines_CSR__c/fields/FA__c.field-meta.xml
<CustomField>
    <fullName>FA__c</fullName>
    <label>FA</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>