force-app/main/default/objects/Airlines_CSR__c/fields/FC__c.field-meta.xml
<CustomField>
    <fullName>FC__c</fullName>
    <label>FC</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>