force-app/main/default/objects/Airlines_CSR__c/fields/Final__c.field-meta.xml
<CustomField>
    <fullName>Final__c</fullName>
    <label>Final</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>