force-app/main/default/objects/Airlines_CSR__c/fields/Freight_IATA_MKT__c.field-meta.xml
<CustomField>
    <fullName>Freight_IATA_MKT__c</fullName>
    <label>Freight(IATA/MKT)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>