force-app/main/default/objects/Airlines_CSR__c/fields/GE__c.field-meta.xml
<CustomField>
    <fullName>GE__c</fullName>
    <label>GE</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>