force-app/main/default/objects/Airlines_CSR__c/fields/Gross_Rev__c.field-meta.xml
<CustomField>
    <fullName>Gross_Rev__c</fullName>
    <label>Gross Rev</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>