force-app/main/default/objects/Airlines_CSR__c/fields/Grs_Wt__c.field-meta.xml
<CustomField>
    <fullName>Grs_Wt__c</fullName>
    <label>Grs. Wt.</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>