force-app/main/default/objects/Airlines_CSR__c/fields/GS__c.field-meta.xml
<CustomField>
    <fullName>GS__c</fullName>
    <label>GS</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>