force-app/main/default/objects/Airlines_CSR__c/fields/GSTINNo__c.field-meta.xml
<CustomField>
    <fullName>GSTINNo__c</fullName>
    <label>GSTINNo</label>
    <length>255</length>
    <type>Text</type>
</CustomField>