force-app/main/default/objects/Airlines_CSR__c/fields/GSTOnComm__c.field-meta.xml
<CustomField>
    <fullName>GSTOnComm__c</fullName>
    <label>GSTOnComm</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>