force-app/main/default/objects/Airlines_CSR__c/fields/Handling_MISC__c.field-meta.xml
<CustomField>
    <fullName>Handling_MISC__c</fullName>
    <label>Handling &amp; MISC</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>