force-app/main/default/objects/Airlines_CSR__c/fields/HC_C__c.field-meta.xml
<CustomField>
    <fullName>HC_C__c</fullName>
    <label>HC_C</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>