force-app/main/default/objects/Airlines_CSR__c/fields/HI__c.field-meta.xml
<CustomField>
    <fullName>HI__c</fullName>
    <label>HI</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>