force-app/main/default/objects/Airlines_CSR__c/fields/IG__c.field-meta.xml
<CustomField>
    <fullName>IG__c</fullName>
    <label>IG</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>