force-app/main/default/objects/Airlines_CSR__c/fields/Incluging_GST__c.field-meta.xml
<CustomField>
    <fullName>Incluging_GST__c</fullName>
    <label>Incluging GST</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>