force-app/main/default/objects/Airlines_CSR__c/fields/Into_GAU__c.field-meta.xml
<CustomField>
    <fullName>Into_GAU__c</fullName>
    <label>Into GAU</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>