force-app/main/default/objects/Airlines_CSR__c/fields/Into_IMF_Excpt_DEL__c.field-meta.xml
<CustomField>
    <fullName>Into_IMF_Excpt_DEL__c</fullName>
    <label>Into IMF Excpt DEL</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>