force-app/main/default/objects/Airlines_CSR__c/fields/Into_PNQ__c.field-meta.xml
<CustomField>
    <fullName>Into_PNQ__c</fullName>
    <label>Into PNQ</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>