force-app/main/default/objects/Airlines_CSR__c/fields/isAllShipmentsFlown__c.field-meta.xml
<CustomField>
    <fullName>isAllShipmentsFlown__c</fullName>
    <label>isAllShipmentsFlown</label>
    <length>255</length>
    <type>Text</type>
</CustomField>