force-app/main/default/objects/Airlines_CSR__c/fields/MC__c.field-meta.xml
<CustomField>
    <fullName>MC__c</fullName>
    <label>MC</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>