force-app/main/default/objects/Airlines_CSR__c/fields/MS_C__c.field-meta.xml
<CustomField>
    <fullName>MS_C__c</fullName>
    <label>MS_C</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>