force-app/main/default/objects/Airlines_CSR__c/fields/MY__c.field-meta.xml
<CustomField>
    <fullName>MY__c</fullName>
    <label>MY</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>