force-app/main/default/objects/Airlines_CSR__c/fields/NatureOfGoods__c.field-meta.xml
<CustomField>
    <fullName>NatureOfGoods__c</fullName>
    <label>NatureOfGoods</label>
    <length>255</length>
    <type>Text</type>
</CustomField>