force-app/main/default/objects/Airlines_CSR__c/fields/NET_Freight__c.field-meta.xml
<CustomField>
    <fullName>NET_Freight__c</fullName>
    <label>NET_Freight</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>