force-app/main/default/objects/Airlines_CSR__c/fields/NN_Freight__c.field-meta.xml
<CustomField>
    <fullName>NN_Freight__c</fullName>
    <label>NN Freight</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>