force-app/main/default/objects/Airlines_CSR__c/fields/NON_CUT_Charges_HDC_IN__c.field-meta.xml
<CustomField>
    <fullName>NON_CUT_Charges_HDC_IN__c</fullName>
    <label>NON CUT Charges HDC IN</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>