force-app/main/default/objects/Airlines_CSR__c/fields/OC_Due_Car__c.field-meta.xml
<CustomField>
    <fullName>OC_Due_Car__c</fullName>
    <label>OCDueCar</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>