force-app/main/default/objects/Airlines_CSR__c/fields/OCDA__c.field-meta.xml
<CustomField>
    <fullName>OCDA__c</fullName>
    <label>OCDA</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>