force-app/main/default/objects/Airlines_CSR__c/fields/OD_Pair__c.field-meta.xml
<CustomField>
    <fullName>OD_Pair__c</fullName>
    <label>OD Pair</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>