force-app/main/default/objects/Airlines_CSR__c/fields/Origin_Airport__c.field-meta.xml
<CustomField>
    <fullName>Origin_Airport__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Origin Airport</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Transport__c.RecordTypeId</field>
            <operation>equals</operation>
            <value>Airport</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Transport__c</referenceTo>
    <relationshipLabel>Airlines CSR</relationshipLabel>
    <relationshipName>Airlines_CSR</relationshipName>
    <type>Lookup</type>
</CustomField>