force-app/main/default/objects/Airlines_CSR__c/fields/Origin_CIty__c.field-meta.xml
<CustomField>
    <fullName>Origin_CIty__c</fullName>
    <label>Origin CIty</label>
    <length>255</length>
    <type>Text</type>
</CustomField>