force-app/main/default/objects/Airlines_CSR__c/fields/Origin_SC__c.field-meta.xml
<CustomField>
    <fullName>Origin_SC__c</fullName>
    <label>Origin SC</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>