force-app/main/default/objects/Airlines_CSR__c/fields/OTHER__c.field-meta.xml
<CustomField>
    <fullName>OTHER__c</fullName>
    <label>OTHER</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>