force-app/main/default/objects/Airlines_CSR__c/fields/Other_SC__c.field-meta.xml
<CustomField>
    <fullName>Other_SC__c</fullName>
    <label>Other SC</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>