force-app/main/default/objects/Airlines_CSR__c/fields/Payment_Mode__c.field-meta.xml
<CustomField>
    <fullName>Payment_Mode__c</fullName>
    <label>Payment Mode</label>
    <length>255</length>
    <type>Text</type>
</CustomField>