force-app/main/default/objects/Airlines_CSR__c/fields/PCS__c.field-meta.xml
<CustomField>
    <fullName>PCS__c</fullName>
    <label>PCS</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>