force-app/main/default/objects/Airlines_CSR__c/fields/ProformaInvoiceNumber__c.field-meta.xml
<CustomField>
    <fullName>ProformaInvoiceNumber__c</fullName>
    <label>ProformaInvoiceNumber</label>
    <length>255</length>
    <type>Text</type>
</CustomField>