force-app/main/default/objects/Airlines_CSR__c/fields/RatePerKG_IATA_MKT__c.field-meta.xml
<CustomField>
    <fullName>RatePerKG_IATA_MKT__c</fullName>
    <label>Rate Per KG(IATA/MKT)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>