force-app/main/default/objects/Airlines_CSR__c/fields/Refund_AWB_Fee__c.field-meta.xml
<CustomField>
    <fullName>Refund_AWB_Fee__c</fullName>
    <label>Refund AWB Fee</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>