force-app/main/default/objects/Airlines_CSR__c/fields/SC__c.field-meta.xml
<CustomField>
    <fullName>SC__c</fullName>
    <label>SC</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>