force-app/main/default/objects/Airlines_CSR__c/fields/SEC_Rs_1_kg__c.field-meta.xml
<CustomField>
    <fullName>SEC_Rs_1_kg__c</fullName>
    <label>SEC Rs. 1/kg</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>