force-app/main/default/objects/Airlines_CSR__c/fields/SG__c.field-meta.xml
<CustomField>
    <fullName>SG__c</fullName>
    <label>SG</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>