force-app/main/default/objects/Airlines_CSR__c/fields/SHC__c.field-meta.xml
<CustomField>
    <fullName>SHC__c</fullName>
    <label>SHC</label>
    <length>100</length>
    <type>Text</type>
</CustomField>