force-app/main/default/objects/Airlines_CSR__c/fields/SS__c.field-meta.xml
<CustomField>
    <fullName>SS__c</fullName>
    <label>SS</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>