force-app/main/default/objects/Airlines_CSR__c/fields/SSP_Rates__c.field-meta.xml
<CustomField>
    <fullName>SSP_Rates__c</fullName>
    <label>SSP Rates</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>