force-app/main/default/objects/Airlines_CSR__c/fields/TAD__c.field-meta.xml
<CustomField>
    <fullName>TAD__c</fullName>
    <label>TAD</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>