force-app/main/default/objects/Airlines_CSR__c/fields/TDSOnCommAmt__c.field-meta.xml
<CustomField>
    <fullName>TDSOnCommAmt__c</fullName>
    <label>TDSOnCommAmt</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>