force-app/main/default/objects/Airlines_CSR__c/fields/TH__c.field-meta.xml
<CustomField>
    <fullName>TH__c</fullName>
    <label>TH</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>