force-app/main/default/objects/Airlines_CSR__c/fields/TI__c.field-meta.xml
<CustomField>
    <fullName>TI__c</fullName>
    <label>TI</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>