force-app/main/default/objects/Airlines_CSR__c/fields/TO__c.field-meta.xml
<CustomField>
    <fullName>TO__c</fullName>
    <label>TO</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>