force-app/main/default/objects/Airlines_CSR__c/fields/TO_C__c.field-meta.xml
<CustomField>
    <fullName>TO_C__c</fullName>
    <label>TO_C</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>