force-app/main/default/objects/Airlines_CSR__c/fields/Total_Due_Carrier__c.field-meta.xml
<CustomField>
    <fullName>Total_Due_Carrier__c</fullName>
    <label>Total Due Carrier</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>