force-app/main/default/objects/Airlines_CSR__c/fields/Total_OC__c.field-meta.xml
<CustomField>
    <fullName>Total_OC__c</fullName>
    <label>Total_OC</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>