force-app/main/default/objects/Airlines_CSR__c/fields/Total_Receivable_Amount_in_INR__c.field-meta.xml
<CustomField>
    <fullName>Total_Receivable_Amount_in_INR__c</fullName>
    <label>Total Receivable Amount in INR</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>