force-app/main/default/objects/Airlines_CSR__c/fields/TP__c.field-meta.xml
<CustomField>
    <fullName>TP__c</fullName>
    <label>TP</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>