force-app/main/default/objects/Airlines_CSR__c/fields/TS_C__c.field-meta.xml
<CustomField>
    <fullName>TS_C__c</fullName>
    <label>TS_C</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>