force-app/main/default/objects/Airlines_CSR__c/fields/TSP_Inbound_TIC__c.field-meta.xml
<CustomField>
    <fullName>TSP_Inbound_TIC__c</fullName>
    <label>TSP-Inbound TIC</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>