force-app/main/default/objects/Airlines_CSR__c/fields/TSP_Outbound_TOC__c.field-meta.xml
<CustomField>
    <fullName>TSP_Outbound_TOC__c</fullName>
    <label>TSP-Outbound TOC</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>