force-app/main/default/objects/Airlines_CSR__c/fields/UN__c.field-meta.xml
<CustomField>
    <fullName>UN__c</fullName>
    <label>UN</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>