force-app/main/default/objects/Airlines_CSR__c/fields/UOM1__c.field-meta.xml
<CustomField>
    <fullName>UOM1__c</fullName>
    <label>UOM</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>KG</fullName>
                <default>true</default>
                <label>KG</label>
            </value>
            <value>
                <fullName>Gram</fullName>
            </value>
            <value>
                <fullName>Carat</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>