force-app/main/default/objects/Airlines_CSR__c/fields/UT__c.field-meta.xml
<CustomField>
    <fullName>UT__c</fullName>
    <label>UT</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>