force-app/main/default/objects/Airlines_CSR__c/fields/UTC_Inbound_UDC_Unitization_at_destina__c.field-meta.xml
<CustomField>
    <fullName>UTC_Inbound_UDC_Unitization_at_destina__c</fullName>
    <label>UTC-Inbound-UDC( Unitization at destina</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>