force-app/main/default/objects/Airlines_CSR__c/fields/UTGST__c.field-meta.xml
<CustomField>
    <fullName>UTGST__c</fullName>
    <label>UTGST</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>