force-app/main/default/objects/Airlines_CSR__c/fields/VA__c.field-meta.xml
<CustomField>
    <fullName>VA__c</fullName>
    <label>VA</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>