force-app/main/default/objects/Airlines_CSR__c/fields/VL__c.field-meta.xml
<CustomField>
    <fullName>VL__c</fullName>
    <label>VL</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>