force-app/main/default/objects/Airlines_CSR__c/fields/VS__c.field-meta.xml
<CustomField>
    <fullName>VS__c</fullName>
    <label>VS</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>