force-app/main/default/objects/Airlines_CSR__c/fields/WC__c.field-meta.xml
<CustomField>
    <fullName>WC__c</fullName>
    <label>WC</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>