force-app/main/default/objects/Airlines_CSR__c/fields/X5_Discount__c.field-meta.xml
<CustomField>
    <fullName>X5_Discount__c</fullName>
    <label>5% Discount</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>