force-app/main/default/objects/Airlines_CSR__c/fields/XC__c.field-meta.xml
<CustomField>
    <fullName>XC__c</fullName>
    <label>XC</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>