force-app/main/default/objects/Airlines_CSR__c/fields/XC_XRAY_CERTIFICATION__c.field-meta.xml
<CustomField>
    <fullName>XC_XRAY_CERTIFICATION__c</fullName>
    <label>(XC) XRAY CERTIFICATION</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>