force-app/main/default/objects/Airlines_CSR__c/fields/XD__c.field-meta.xml
<CustomField>
    <fullName>XD__c</fullName>
    <label>XD</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>