force-app/main/default/objects/Airlines_CSR__c/fields/XR__c.field-meta.xml
<CustomField>
    <fullName>XR__c</fullName>
    <label>XR</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>