force-app/main/default/objects/Airlines_CSR__c/fields/XS_XRAY_CHARGE__c.field-meta.xml
<CustomField>
    <fullName>XS_XRAY_CHARGE__c</fullName>
    <label>(XS) XRAY CHARGE</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>