force-app/main/default/objects/Airlines_CSR__c/fields/XY__c.field-meta.xml
<CustomField>
    <fullName>XY__c</fullName>
    <label>XY</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>