force-app/main/default/objects/Airlines_CSR__c/recordTypes/AIR_ASIA.recordType-meta.xml
<RecordType>
    <fullName>AIR_ASIA</fullName>
    <active>false</active>
    <label>AIR ASIA</label>
</RecordType>