force-app/main/default/objects/Airlines_CSR__c/recordTypes/GO.recordType-meta.xml
<RecordType>
    <fullName>GO</fullName>
    <active>false</active>
    <label>GO</label>
</RecordType>