force-app/main/default/objects/Airlines_CSR__c/recordTypes/INDIGO.recordType-meta.xml
<RecordType>
    <fullName>INDIGO</fullName>
    <active>false</active>
    <label>INDIGO</label>
</RecordType>