force-app/main/default/objects/Airlines_CSR__c/recordTypes/SPICE.recordType-meta.xml
<RecordType>
    <fullName>SPICE</fullName>
    <active>true</active>
    <label>SPICE</label>
</RecordType>